--- a/lab2/microsoft/microsoft.html
+++ b/lab2/microsoft/microsoft.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="micro_style.css">
     <link rel="icon" href="./static/img/MSFT.png">
     <meta charset="UTF-8">
     <title>Microsoft</title>
